Change the favicon, title, add the overlay scrollbar from tiktok, make the header fix, add margin-top to the default config, wrap the headless tippy component into a div, add the effect to the language list to make it straight

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -28,7 +28,41 @@ body {
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizeLegibility;
+  overflow-y: overlay;
 }
+
+//Scrollbar css
+
+html ::-webkit-scrollbar {
+  border-radius: 0px;
+  width: 8px;
+}
+
+html *::-webkit-scrollbar {
+  border-radius: 0;
+  width: 8px;
+}
+
+html ::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(22, 24, 35, 0.06);
+}
+
+html *::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(22, 24, 35, .06);
+}
+
+html ::-webkit-scrollbar-track {
+  border-radius: 0px;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+html *::-webkit-scrollbar-track {
+  border-radius: 0;
+  background-color: rgba(0, 0, 0, 0);
+}
+
 
 button,
 input,
