--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -6,8 +6,8 @@
 
 .container {
   width: var(--default-laypout-width);
-  min-height: 1000px;
   display: flex;
+  margin-top: var(--default-layout-header-height);
   padding: 0 var(--default-layout-horizontal-spacer);
 }
 
