--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -8,6 +8,13 @@
 
 .menu-popper {
     padding-bottom: 8px;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.menu-body {
+    overflow-y: auto;
 }
 
 // Menu item
@@ -35,6 +42,7 @@
     position: relative;
     height: 50px;
     margin-top: -8px;
+    flex-shrink: 0;
 }
 
 .back-btn {
